--- a/project.config.json
+++ b/project.config.json
@@ -7,6 +7,6 @@
 		"newFeature": true
 	},
 	"appid": "wxb749699744efbcff",
-	"projectname": "winx0001",
+	"projectname": "weixin0001",
 	"condition": {}
 }
